--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 cloudinary==1.42.2
 django-cloudinary-storage==0.3.0
+djangorestframework==3.12.4
 idna==3.10
 requests==2.32.3
 six==1.17.0
 urllib3==2.3.0
+Django==3.2.4
+Pillow==8.2.0
